syntax = "proto3";

option csharp_namespace = "nfx_auth";

package auth;

service Auth {
    rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message ValidateRequest {
    string token = 2;
}

message ValidateResponse {
    string email = 1;
    bool isAdmin = 2;
}
